[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/CutiveMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Title.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.12549, 0.12549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mutiplayer" type="Button" parent="Options"]
margin_right = 122.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "Multiplayer"

[node name="Options" type="Button" parent="Options"]
margin_top = 41.0
margin_right = 122.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Options"

[node name="Credits" type="Button" parent="Options"]
margin_top = 82.0
margin_right = 122.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 2 )
text = "Credits"

[node name="Quit" type="Button" parent="Options"]
margin_top = 123.0
margin_right = 122.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 120.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Silent Running"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Author" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -47.0
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 3 )
text = "By Huw Taylor"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Options/Mutiplayer" to="." method="_on_Mutiplayer"]
[connection signal="pressed" from="Options/Options" to="." method="_on_Options"]
[connection signal="pressed" from="Options/Credits" to="." method="_on_Credits"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_Quit"]
